# notebook-converter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: README.md  development.md  installation.md  output-format.md  user-guide.md
src/: __init__.py
src/converter/: __init__.py  extractor.py  models.py  packager.py
src/ui/: __init__.py  components.py  sidebar.py  styles.py
src/utils/: __init__.py  helpers.py
tests/: __init__.py  test_extractor.py  test_models.py  test_packager.py
